# SkillBox-Search_Engine

./: .gitignore  CMakeLists.txt  README.md  config.json  requests.json
doc/: SkillBox.pptx
doc/html/: _converter_j_s_o_n_8h.html  _converter_j_s_o_n_8h.js  _converter_j_s_o_n_8h_source.html  _inverted_index_8h.html  _inverted_index_8h.js  _inverted_index_8h_source.html  _r_e_a_d_m_e_8md.html  _search_server_8h.html  _search_server_8h.js  _search_server_8h_source.html  annotated.html  annotated_dup.js  class_converter_j_s_o_n-members.html  class_converter_j_s_o_n.html  class_converter_j_s_o_n.js  class_inverted_index-members.html  class_inverted_index.html  class_inverted_index.js  class_search_server-members.html  class_search_server.html  class_search_server.js  classes.html  dir_048d48ae4cfe0eab337ebaa4fe4f763e.html  dir_048d48ae4cfe0eab337ebaa4fe4f763e.js  dir_275089585c7fc1b5fd5d7d42c69cb1da.html  dir_275089585c7fc1b5fd5d7d42c69cb1da.js  dir_4a4e932dea9a6f3fa4fd4a58e37add11.html  dir_4a4e932dea9a6f3fa4fd4a58e37add11.js  dir_81792c53b3b7783912e2f02f21adbd4a.html  dir_81792c53b3b7783912e2f02f21adbd4a.js  dir_83aa34e0eaeff0edc1799efcbe10600f.html  dir_83aa34e0eaeff0edc1799efcbe10600f.js  dir_89ee69df2afade3b35df8ae0ce97d402.html  dir_89ee69df2afade3b35df8ae0ce97d402.js  dir_a4c43618fd4178b76533e1144909d48b.html  dir_a4c43618fd4178b76533e1144909d48b.js  dir_bf23f719df14b469bc085c38ae174fe4.html  dir_bf23f719df14b469bc085c38ae174fe4.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+39 more)
doc/html/search/: all_0.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_4.js  variables_5.js
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h  config.h  config.h.in  invertedIndex.h  version.h
resources/: text01.txt  text02.txt  text03.txt  text04.txt  text05.txt  text06.txt
source/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  invertedIndex.cpp  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchEngine_test.cpp
